# Deep_RL

./: README.md  dataInstance.py  experience.py  myAgent.py  myAgent_cart.py  observation.py  replayBuffer.py
DDPG/: README.md  experience.py  myAgent_pendulum.py  replayBuffer.py  setupMuJoCo.sh
DDPG/h3pper/: README.md  hopper_agent.py  replayBuffer.py
DDPG/h3pper/createGroundModel/: README.md  createOneDataSet.py  groundReactionModel.m  groundReactionModel1.m  groundReactionModel2.m  model.h5  model1.h5  model2.h5  processData.py
DDPG/h3pper/createGroundModel/generateData/intrude/: CMakeLists.txt  README.md  createDataSet.sh  intrude.cpp  setup.json
DDPG/h3pper/gym-hopping_robot/: README.md  setup.py  testGym.py
DDPG/mujoco_cheetah/: README.md  cheetah_agent.py
DDPG/mujoco_handManipulateBlock/: README.md  manipulate_block_agent.py
DDPG/mujoco_hopper/: README.md  hopper_agent.py  replayBuffer.py
DDPG/mujoco_humanoid/: README.md  humanoid_agent.py
DDPG/pendulum/: README.md  myAgent_pendulum.py  replayBuffer.py
DDQN/: README.md
DDQN/BBreaker/: README.md
DDQN/cart_pole/: README.md  myAgent_cart.py
DQN/: README.md  trainingInstance.py  video.mkv
PMTG/: README.md  TG.py  __init__.py  myAgent.py  optimalPath.py
PMTG/PMTG_paper_problem/: README.md  myAgent.py  optimalPath.py
PMTG/gym-hopping_robot_pmtg/: README.md  setup.py  testGym.py
PMTG/gym-hopping_robot_pmtg/gym_hopping_robot_pmtg/: __init__.py
PMTG/h3pper/: README.md  hopper_agent.py
TD3/: README.md  hopper_agent.py
cart_pole/: README.md  experience.py  replayBuffer.py
(+59 files in other folders)
